# Margadarsaka

./: .appwrite  .env.example  .gitignore  APPWRITE_SITES.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.sites  FEATURE_INTEGRATION_SUMMARY.md  PRODUCTION_DEPLOYMENT.md  README.md  build.sh  career_test.py  configure_sites.js  create_integrated_package.py  deploy_sites.py  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt  run.py  setup_doppler.py  start.sh  test.ps1  test.sh  test_appwrite_mvp.py
deploy/: cloud-run.yaml  deploy.sh
docs/appwrite/: sites.md
margadarsaka_unified/: .dockerignore  Dockerfile  pyproject.toml  run.py
margadarsaka_unified/margadarsaka/: ai_integration.py  api.py  engine.py  models.py  pdf_generator.py  psychology.py  secrets.py  ui.py  ui_modern.py
margadarsaka_unified/margadarsaka/services/: __init__.py  appwrite_service.py
margadarsaka_unified/margadarsaka/static/css/: main.css
margadarsaka_unified/margadarsaka/static/js/: rating_component.js
margadarsaka_unified/margadarsaka/ui/: __init__.py  appwrite_components.py
margadarsaka_unified/margadarsaka/ui/components/: auth_components.py  cards.py  oauth_auth.py
margadarsaka_unified/margadarsaka/ui/components/custom_components/: __init__.py  example_usage.py
margadarsaka_unified/margadarsaka/ui/pages/: chat.py  resume.py
margadarsaka_unified/margadarsaka/ui/utils/: __init__.py  i18n.py  state_manager.py  styling.py
pages/: ai.py  resume.py  roadmap.py  test.py
src/margadarsaka/: __init__.py  ai_integration.py  api.py  data.py  engine.py  main.py  models.py  pdf_generator.py  psychology.py  resume_analyzer.py  secrets.py  ui.py  ui_modern.py
src/margadarsaka/services/: appwrite_service.py
src/margadarsaka/services/sites/: __init__.py  sites_manager.py
src/margadarsaka/ui/components/: __init__.py  auth_components.py  footer.py  forms.py  header.py  navigation.py  oauth_auth.py  oidc_auth.py  resume_score_display.py  simple_header.py
src/margadarsaka/ui/components/custom_components/: README.md
src/margadarsaka/ui/components/custom_components/rating_component/: __init__.py
src/margadarsaka/ui/pages/: __init__.py  assessment.py  chat.py  resources.py
src/margadarsaka/ui/utils/: i18n.py  streamlit_styling.py  styling.py
tests/: conftest.py  test_api.py  test_appwrite_auth.py  test_doppler.py  test_engine.py
