[project]
name = "margadarsaka"
version = "1.0.0"
description = "AI-Powered Career Guidance Platform"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Dakshx-Gupta", email = "your-email@example.com"}
]
keywords = ["career", "ai", "guidance", "streamlit", "appwrite"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "streamlit>=1.49.0",
    "streamlit-component-lib>=2.0.0",
    "appwrite>=17.0.0",
    "pandas>=1.5.0",
    "numpy>=1.24.0",
    "plotly>=5.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "PyPDF2>=3.0.0",
    "python-docx>=0.8.11",
    "spacy>=3.7.0",
    "scikit-learn>=1.3.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0"
]

[project.scripts]
margadarsaka = "margadarsaka.ui_modern:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["margadarsaka"]

[tool.hatch.build.targets.wheel.force-include]
"margadarsaka/static" = "margadarsaka/static"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "T20"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
